{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 875,
  "lineage": "420e0309-3f9f-a826-0cc5-8a91f9465840",
  "resources": [
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:590183945701:security-group/sg-02f696070adaefd71",
            "description": "EKS_Terraform_SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f696070adaefd71",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Inbound Rule",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e7def17a70530955"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "EFS_Terraform_SG",
            "name_prefix": "",
            "owner_id": "590183945701",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EFS_Terraform_SG"
            },
            "tags_all": {
              "Name": "EFS_Terraform_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0646d709e8cf72bfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_eks_addon.ekf_kube_proxy",
            "module.eks.aws_eks_addon.eks_coredns",
            "module.eks.aws_eks_addon.eks_vpc_cni",
            "module.eks.aws_eks_addon.pod_identity_agent",
            "module.eks.aws_eks_cluster.main_eks",
            "module.eks.aws_eks_node_group.main_node_group",
            "module.eks.aws_eks_pod_identity_association.vpc_cni",
            "module.eks.aws_iam_role.vpc_cni_pod_identity_role",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_policy",
            "module.eks.aws_iam_role_policy_attachment.eks_node_policy",
            "module.eks.aws_iam_role_policy_attachment.eks_vpc_cni_policy",
            "module.eks.aws_security_group.eks_SG",
            "module.eks.data.aws_iam_role.cluster_role",
            "module.eks.data.aws_iam_role.node_role",
            "module.vpc.aws_subnet.main_subnet",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:590183945701:security-group/sg-0e7def17a70530955",
            "description": "EKS_Terraform_SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7def17a70530955",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Inbound Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Inbound Rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "EKS_Terraform_SG",
            "name_prefix": "",
            "owner_id": "590183945701",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EKS_Terraform_SG"
            },
            "tags_all": {
              "Name": "EKS_Terraform_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0646d709e8cf72bfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:590183945701:internet-gateway/igw-066881d4e06da5379",
            "id": "igw-066881d4e06da5379",
            "owner_id": "590183945701",
            "tags": {
              "Name": "Terraform_ig"
            },
            "tags_all": {
              "Name": "Terraform_ig"
            },
            "vpc_id": "vpc-0646d709e8cf72bfd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:590183945701:route-table/rtb-014f32c9c85b545b7",
            "id": "rtb-014f32c9c85b545b7",
            "owner_id": "590183945701",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-066881d4e06da5379",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_rt"
            },
            "tags_all": {
              "Name": "Terraform_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0646d709e8cf72bfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main_ig",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_rt-association-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca99eeaa786a6c05",
            "route_table_id": "rtb-014f32c9c85b545b7",
            "subnet_id": "subnet-06e7d07711a48a6c5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main_ig",
            "module.vpc.aws_route_table.main_rt",
            "module.vpc.aws_subnet.main_subnet",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0122680d2330c1205",
            "route_table_id": "rtb-014f32c9c85b545b7",
            "subnet_id": "subnet-0f772eb072c1a49ae"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main_ig",
            "module.vpc.aws_route_table.main_rt",
            "module.vpc.aws_subnet.main_subnet",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfea87a310c8404d",
            "route_table_id": "rtb-014f32c9c85b545b7",
            "subnet_id": "subnet-0874624c952c75d15"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main_ig",
            "module.vpc.aws_route_table.main_rt",
            "module.vpc.aws_subnet.main_subnet",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:590183945701:subnet/subnet-06e7d07711a48a6c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e7d07711a48a6c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183945701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_public_subnet-1",
              "kubernetes.io/cluster/testing_k8s": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Terraform_public_subnet-1",
              "kubernetes.io/cluster/testing_k8s": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0646d709e8cf72bfd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:590183945701:subnet/subnet-0f772eb072c1a49ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f772eb072c1a49ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183945701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_public_subnet-2",
              "kubernetes.io/cluster/testing_k8s": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Terraform_public_subnet-2",
              "kubernetes.io/cluster/testing_k8s": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0646d709e8cf72bfd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:590183945701:subnet/subnet-0874624c952c75d15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0874624c952c75d15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183945701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_public_subnet-3",
              "kubernetes.io/cluster/testing_k8s": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Terraform_public_subnet-3",
              "kubernetes.io/cluster/testing_k8s": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0646d709e8cf72bfd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:590183945701:vpc/vpc-0646d709e8cf72bfd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-059cb19b8a902ddf6",
            "default_route_table_id": "rtb-058cf95591c36b9f0",
            "default_security_group_id": "sg-02ac4dcdddb9da4fd",
            "dhcp_options_id": "dopt-01d274818061ed760",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0646d709e8cf72bfd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-058cf95591c36b9f0",
            "owner_id": "590183945701",
            "tags": {
              "Name": "Terraform_vpc"
            },
            "tags_all": {
              "Name": "Terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}